Fix alignment of attending_online checkbox on generic event registration form

--- a/web/themes/custom/union_marketing/scss/components/_forms.scss
+++ b/web/themes/custom/union_marketing/scss/components/_forms.scss
@@ -50,7 +50,8 @@
 }
 
 .webform-submission-event-registration-form {
-  .form-item-opt-in {
+  .form-item-opt-in,
+  .form-item-attending-online {
     margin-left: 0;
   }
 
